# 9-practica-pollimorfismosalario-abraham21587

./: CMakeLists.txt  desarrolladorsenior.cpp  desarrolladorsenior.h  desrolladorjunior.cpp  desrolladorjunior.h  empleado.cpp  empleado.h  lidertecnico.cpp  lidertecnico.h  main.cpp  nomina.cpp  nomina.h  tester.cpp  tester.h  uml.md
