cmake_minimum_required(VERSION 4.0)
project(9_practica_pollimorfismosalario_abraham21587)

set(CMAKE_CXX_STANDARD 20)

add_executable(9_practica_pollimorfismosalario_abraham21587 main.cpp
        empleado.cpp
        empleado.h
        desrolladorjunior.cpp
        desrolladorjunior.h
        desarrolladorsenior.cpp
        desarrolladorsenior.h
        lidertecnico.cpp
        lidertecnico.h
        tester.cpp
        tester.h
        nomina.cpp
        nomina.h)
